# SortYourPapers

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  Tomorrow.md  dev.toml
assets/testsets/: README.md  scijudgebench-diverse.json  scijudgebench-diverse.toml
crates/paper-db/: Cargo.toml
crates/paper-db/src/: lib.rs
crates/paperdb/: Cargo.toml
crates/paperdb/src/: lib.rs
crates/paperfetch/: Cargo.toml
crates/paperfetch/src/: catalog.rs  curate.rs  lib.rs  manifest.rs  materialize.rs
crates/syp/: Cargo.toml
crates/syp-ai/: Cargo.toml
crates/syp-ai/src/: error.rs  lib.rs
crates/syp-ai/src/llm/: batch.rs  client.rs  mod.rs  retry.rs
crates/syp-ai/src/llm/providers/: gemini.rs  ollama.rs
crates/syp-core/: Cargo.toml
crates/syp-core/src/: defaults.rs  inputs.rs  lib.rs  lib_tests.rs  testsets.rs
crates/syp-core/src/app/: debug_seed.rs  mod.rs  path_resolution.rs  reference_index.rs  tests.rs
crates/syp-core/src/config/: mod.rs  resolve.rs  sources.rs  tests.rs  xdg.rs
crates/syp-core/src/llm/: client.rs  embedding.rs  mod.rs
crates/syp-core/src/llm/providers/: gemini.rs  ollama.rs  openai.rs
crates/syp-core/src/papers/: embedding_support.rs  extract.rs  mod.rs
crates/syp-core/src/papers/fs_ops/: mod.rs
crates/syp-core/src/papers/placement/: mod.rs  runtime.rs  tests.rs
crates/syp-core/src/papers/placement/runtime/: engine.rs  llm_tiebreak.rs
crates/syp-core/src/papers/taxonomy/: batching.rs  mod.rs  prompts.rs  reference.rs  taxonomy.rs  tests.rs  validation.rs
crates/syp-core/src/session/: commands.rs  mod.rs  output_flow.rs  runtime.rs  workspace.rs
crates/syp-core/src/session/commands/: impact.rs
crates/syp-core/src/session/workspace/: queries.rs  store.rs  types.rs
crates/syp-library/: Cargo.toml
crates/syp-library/src/: error.rs  lib.rs  testsets.rs
crates/syp-library/src/papers/: embedding_support.rs  mod.rs  preprocess.rs
crates/syp-library/src/papers/fs_ops/: planner.rs
crates/syp-library/src/papers/placement/: inspect.rs  mod.rs  prompts.rs  runtime.rs  tests.rs  validation.rs
crates/syp-library/src/papers/placement/runtime/: embedding.rs  engine.rs  progress.rs  scoring.rs  tests.rs
crates/syp-library/src/papers/preprocess/: normalization.rs
crates/syp-library/src/papers/taxonomy/: keywords.rs  mod.rs  prompts.rs  reference.rs  taxonomy.rs  tests.rs
crates/syp-library/src/terminal/: mod.rs  report.rs
crates/syp-workflow/: Cargo.toml
crates/syp-workflow/src/: defaults.rs  error.rs  inputs.rs  lib.rs  lib_tests.rs
crates/syp-workflow/src/app/: extract_text.rs  mod.rs  reference_index.rs  run.rs  tests.rs
crates/syp-workflow/src/config/: mod.rs  tests.rs  xdg.rs
crates/syp-workflow/src/session/: output_flow.rs  runtime.rs
crates/syp-workflow/src/session/commands/: cleanup.rs  init.rs  list.rs  mod.rs  rerun.rs  resume.rs  review.rs  selection.rs
crates/syp-workflow/src/session/workspace/: cleanup.rs  mod.rs  paths.rs
crates/syp/src/: cli.rs  entrypoints.rs  lib.rs  main.rs
crates/syptui/: Cargo.toml
crates/syptui/src/: lib.rs  main.rs  prefs.rs
crates/syptui/src/tui/: app.rs  backend.rs  extract.rs  forms.rs  mod.rs  model.rs  render.rs  taxonomy_tree.rs  tests.rs
crates/syptui/src/tui/forms/: extract_form.rs  run_form.rs
crates/syptui/src/tui/forms/run_form/: config_build.rs  directory_query.rs  draw.rs  mod.rs  state.rs  tests.rs  validation.rs
crates/syptui/src/tui/render/: extract.rs  header.rs  home.rs  layout.rs  mod.rs  operation.rs  overlay.rs  review.rs
docs/: architecture.md  embedding_comparison.md  ui-milestones.md
python/: README.md  pyproject.toml
python/src/syp_paperfetch/: __init__.py  catalog.py  cli.py  curate.py  dev_config.py  manifest.py  materialize.py  models.py
python/tests/: test_catalog.py  test_cli.py  test_curate.py  test_curated_artifact.py  test_manifest.py  test_materialize.py
src/: app_run.rs  categorize.rs  cli.rs  config.rs  discovery.rs  entrypoints.rs  error.rs  execute.rs  lib.rs  lib_tests.rs  logging.rs  main.rs  models.rs  pdf_extract.rs  place.rs  planner.rs  report.rs  run_state.rs  session_ops.rs  syp.rs  text_preprocess.rs
src/app/: mod.rs
src/app/stages/: output_flow.rs  pipeline.rs  planning.rs
src/app_run/: stages.rs
src/app_run/stages/: output_flow.rs  pipeline.rs  planning.rs
src/categorize/: keywords.rs  prompts.rs  taxonomy.rs  tests.rs  validation.rs
src/config/: mod.rs  resolve.rs  sources.rs  tests.rs  xdg.rs
src/domain/: config.rs  metrics.rs  mod.rs  paper.rs  report.rs  taxonomy.rs
src/fs_ops/: execute.rs  planner.rs
src/llm/: batch.rs  client.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  retry.rs  schema.rs
src/llm/providers/: gemini.rs  ollama.rs  openai.rs
src/papers/: discovery.rs  extract.rs  mod.rs
src/papers/placement/: prompts.rs  runtime.rs
src/papers/preprocess/: terms.rs
src/papers/taxonomy/: keywords.rs  prompts.rs  taxonomy.rs  tests.rs
src/place/: inspect.rs  prompts.rs  runtime.rs  tests.rs  validation.rs
src/placement/: mod.rs  prompts.rs  runtime.rs  tests.rs
src/session/: commands.rs  mod.rs  output_flow.rs  runtime.rs  stage.rs  workspace.rs
src/session/stages/: mod.rs  output_flow.rs  planning.rs
src/taxonomy/: batching.rs  keywords.rs  mod.rs  prompts.rs  taxonomy.rs  tests.rs  validation.rs
src/terminal/: backend.rs  mod.rs  report.rs
src/text_preprocess/: lines.rs  stopwords.rs  tests.rs
src/tui/: app.rs  backend.rs  config_view.rs  extract.rs  forms.rs  input.rs  mod.rs  model.rs  render.rs  session_view.rs  taxonomy_review.rs  taxonomy_tree.rs  theme.rs  ui_widgets.rs
src/tui/forms/: extract_form.rs  run_form.rs
