[package]
name = "sortyourpapers"
version = "0.1.0"
edition = "2024"
default-run = "sortyourpapers"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
indicatif = "0.17"
pdf_oxide = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
