[package]
name = "sortyourpapers"
version = "0.1.0"
edition = "2024"
default-run = "sortyourpapers"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
pdf_oxide = "0.3"
ratatui = "0.29"
tui-tree-widget = "0.23.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
indicatif = "0.18"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
