[workspace]
members = ["crates/syp-core", "crates/syp", "crates/syptui", "crates/paper-db"]
default-members = ["crates/syp", "crates/syptui"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
duckdb = { version = "1", features = ["bundled"] }
directories = "5.0"
indicatif = "0.18"
pdf_oxide = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13"
thiserror = "2.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tui-tree-widget = "0.23.1"
walkdir = "2.5"
