[project]
name = "syp-paperfetch"
version = "0.1.0"
description = "Maintainer tooling for curated arXiv test sets backed by SciJudgeBench."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "huggingface_hub>=0.35.0",
  "tomli-w>=1.2.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[project.scripts]
paperfetch = "syp_paperfetch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syp_paperfetch"]

[tool.hatch.build.targets.sdist]
include = [
  "src/syp_paperfetch",
  "tests",
  "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
