[package]
name = "paperdb"
version.workspace = true
edition.workspace = true

[dependencies]
duckdb.workspace = true
serde_json.workspace = true
syp-core = { path = "../syp-core" }
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
tokio.workspace = true
