[package]
name = "paperfetch"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
syp-core = { path = "../syp-core" }
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
