[package]
name = "syp-workflow"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
directories.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
syp-ai = { path = "../syp-ai" }
syp-library = { path = "../syp-library" }
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
